--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,27 +3,46 @@ image: maven:3.6.1-jdk-11
 stages:
   - build
   - test
+  - style
   - docs
+
+variables:
+  # This will suppress any download for dependencies and plugins or upload messages which would clutter the console log.
+  # `showDateTime` will show the passed time in milliseconds. You need to specify `--batch-mode` to make this work.
+  MAVEN_OPTS: "-Dhttps.protocols=TLSv1.2 -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
+  # As of Maven 3.3.0 instead of this you may define these options in `.mvn/maven.config` so the same config is used
+  # when running from the command line.
+  # `installAtEnd` and `deployAtEnd` are only effective with recent version of the corresponding plugins.
+  MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true"
+
+cache:
+  paths:
+    - .m2/repository/
+    - target/
 
 build:
   stage: build
   script:
-    - mvn package
-  artifacts:
-    paths:
-      - target/*.jar
+    - mvn $MAVEN_CLI_OPTS compile
 
 test:
   stage: test
   script:
-    - mvn test
+    - mvn $MAVEN_CLI_OPTS test
 
-docs:
+javadocs:
   stage: docs
   script:
-    - mvn javadoc:javadoc
+    - mvn $MAVEN_CLI_OPTS javadoc:javadoc
+  only:
+    - merge_request
+
+site:
+  stage: docs
+  script:
+    - mvn $MAVEN_CLI_OPTS site:site
   only:
     - merge_request
   artifacts:
     paths:
-      - target/sites
+      - target/site
