--- a/.editorconfig
+++ b/.editorconfig
@@ -4,14 +4,12 @@ root = true
 charset = utf-8
 end_of_line = LF
 max_line_length = 80
+indent_style = space
 insert_final_newline = true
 
-[*.java]
-indent_style = space
+[*.{java, xml}]
 indent_size = 4
-continuation_indent_size = 8
 max_line_length = 120
 
 [*.sh]
-indent_style = space
 indent_size = 2
