--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,8 @@
                 <configuration>
                     <mainClass>${main.class}</mainClass>
                     <arguments>
-                        <argument></argument>
+                        <argument>-l</argument>
+                        <argument>20</argument>
                     </arguments>
                 </configuration>
             </plugin>
@@ -112,12 +113,13 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>net.revelc.code.formatter</groupId>
-                <artifactId>formatter-maven-plugin</artifactId>
-                <version>2.10.0</version>
+                <groupId>com.coveo</groupId>
+                <artifactId>fmt-maven-plugin</artifactId>
+                <version>2.9</version>
                 <configuration>
-                    <encoding>${project.encoding}</encoding>
-                    <configFile>.formatter.xml</configFile>
+                    <verbose>true</verbose>
+                    <skipSortingImports>true</skipSortingImports>
+                    <style>aosp</style>
                 </configuration>
             </plugin>
             <plugin>
