--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>jcommander</artifactId>
             <version>1.78</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/jline/jline -->
+        <dependency>
+            <groupId>jline</groupId>
+            <artifactId>jline</artifactId>
+            <version>2.14.6</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -71,11 +77,27 @@
                 <version>1.6.0</version>
                 <configuration>
                     <mainClass>${main.class}</mainClass>
-                    <arguments>
-                        <argument>-l</argument>
-                        <argument>20</argument>
-                    </arguments>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>server</id>
+                        <configuration>
+                            <mainClass>server.Server</mainClass>
+                            <arguments>
+                                <argument></argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>client</id>
+                        <configuration>
+                            <mainClass>client.Client</mainClass>
+                            <arguments>
+                                <argument></argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
