--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,8 @@
 APP_SERVER_HOSTNAME=127.0.0.1
 APP_SERVER_PORT=8080
+DB_MONGODB_PASSWORD=dockermongodb
+DB_MONGODB_USERNAME=root
+DB_MYSQL_ROOT_PASSWORD=dockermysql
+DB_MYSQL_USERNAME=dba_app
+DB_MYSQL_PASSWORD=secret
+DB_MYSQL_DATABASE=my_app
