--- a/bin/build
+++ b/bin/build
@@ -9,20 +9,20 @@ cd "${BASE_DIR}/.." || exit 127
 . scripts/helpers.sh
 
 PROGRAM=$(basename "$0")
-VERSION=0.1.0
+VERSION=0.2.1
 
 function display_help() {
   cat <<EOF
-    Usage:
-      ${PROGRAM} [options] [<command>]
+  $(help_section Usage)
+    ${PROGRAM} [options] [<command>]
 
-    Commands:
-      java   <- default value
+  $(help_section Commands)
+    java   <- default value
 
-    Options:
-      -h --help         Show this screen.
-      -v --version      Show version.
-      --clean           Clean all artifacts before building.
+  $(help_section Options)
+    -h --help         Show this screen.
+    -v --version      Show version.
+    --clean           Clean all artifacts before building.
 EOF
 }
 
