--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <developer>
         <id>nelsonmestevao</id>
         <name>Nelson Estevão</name>
-        <email>hello@estevao.xyz</email>
+        <email>hi@estev.ao</email>
         <properties>
             <picUrl>https://github.com/nelsonmestevao.png?size=120</picUrl>
         </properties>
@@ -105,28 +105,6 @@
             <version>1.3</version>
         </plugin>
         <plugin>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>single</goal>
-                    </goals>
-                </execution>
-            </executions>
-            <configuration>
-                <archive>
-                    <manifest>
-                        <addClasspath>true</addClasspath>
-                        <mainClass>${main.class}</mainClass>
-                    </manifest>
-                </archive>
-                <descriptorRefs>
-                    <descriptorRef>jar-with-dependencies</descriptorRef>
-                </descriptorRefs>
-            </configuration>
-        </plugin>
-        <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
             <version>3.1.0</version>
@@ -134,10 +112,29 @@
                 <archive>
                     <manifest>
                         <addClasspath>true</addClasspath>
+                        <classpathPrefix>libs/</classpathPrefix>
                         <mainClass>${main.class}</mainClass>
                     </manifest>
                 </archive>
             </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>3.2.2</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                        <transformers>
+                            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                        </transformers>
+                    </configuration>
+                </execution>
+            </executions>
         </plugin>
         <plugin>
             <groupId>com.diffplug.spotless</groupId>
